<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:background="@color/colorPrimary"
    android:id="@+id/relativeLayout">


    <Button
        android:id="@+id/btncrush"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:layout_marginTop="76dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A02A"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/btncrush"
        app:layout_constraintHorizontal_bias="0.433"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btnmissed"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#A8A02A"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="66dp"
        android:text="@string/btnmissedconnection"
        app:layout_constraintStart_toStartOf="@+id/btncrush"
        app:layout_constraintTop_toBottomOf="@+id/btncrush" />

    <Button
        android:id="@+id/btnpublic"
        android:layout_width="210dp"
        android:layout_height="60dp"
        android:background="@drawable/buttonshape"
        android:shadowColor="#ef5bbe"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:layout_marginTop="66dp"
        android:text="@string/btnpublic"
        app:layout_constraintStart_toStartOf="@+id/btnmissed"
        app:layout_constraintTop_toBottomOf="@+id/btnmissed" />
</android.support.constraint.ConstraintLayout>